--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -62,6 +62,7 @@ html, body {
 
 /* Hover Effect */
 .nav-link:hover {
+    transform: translate(-5px);
     background-color: #444;
     color: #fff;
 }
@@ -70,6 +71,7 @@ html, body {
 a {
     text-decoration: none;
     color: inherit;
+    cursor: default;
 }
 
 /* Dark Mode Support */
