--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,41 +1,115 @@
+/* Home container and content styles */
 .home-container {
     display: flex;
     justify-content: center;
     align-items: center;
     height: calc(100vh - 80px); 
-    background-color: #f4f4f4;
+    background-color: #2C2C2C;
     font-family: Arial, Helvetica, sans-serif;
+    cursor: default;
+}
+.highlight {
+    background: linear-gradient(90deg, #00C9FF, #92FE9D);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .home-content {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     width: 80%;
     max-width: 1200px;
 }
 
-.home-content h1 {
-    font-size: 36px;
+.home-content img {
+    width: 500px;
+    height: 600px;
+    border-radius: 20px;
+    object-fit: cover;
+}
+
+.home-text {
+    margin-left: 8rem;
+    text-align: left;
+}
+
+.home-text h1 {
+    font-size: 2.5rem;
+    color: #ffffff;
+    margin-bottom: 1rem;
+}
+
+.home-text h3 {
+    margin-bottom: 2rem;
+    color: #ffffff;
+    cursor: progress;
+}
+
+/* Fade animation for h2 tags */
+.fade-text {
+    font-size: 1.8rem;
+    color: green;
+    opacity: 0;
+    position: absolute;
+    animation: fadeInOut 6s infinite ease-in-out;
+}
+
+/* Control specific animations */
+.first {
+    animation-delay: 0s;
+}
+
+.second {
+    animation-delay: 3s;
+}
+
+/* Keyframe animation for fading in and out */
+@keyframes fadeInOut {
+    0%, 25% {
+        opacity: 1;
+        visibility: visible;
+    }
+    50%, 100% {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+/* Fun Fact Container Styling */
+.fun-fact-container {
+    display: flex;
+}
+
+.fun-fact {
+    display: flex;
+    border: 4px solid green;
+    padding: 5px;
+    font-weight: bold;
+    border-radius: 5px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+    font-size: 12pt;
+    background-color: #2C2C2C;
+    color: #ffffff;
+}
+
+.fun-fact i {
+    margin-right: 0.5rem;
+}
+
+.fun-fact:hover {
+    background: #ccc;
     color: #2C2C2C;
 }
 
-.home-content img {
-    height: 100%; 
-    width: 100%;
-    max-width: 500px;
-    border-radius: 50px;
-    object-fit: cover;
-    margin-left: auto;
-    box-shadow: rgba(0, 0, 0, 0.2);  
-    animation: fadeIn 5s ease-in-out;
+/* Styling for the h3 text */
+.fun-fact-container p {
+    color: slategrey;
+    font-size: 1rem;
+    font-size: 16pt;
+    padding-left: 20px;
+    font-weight: bold;
+    margin-top: 5px;
 }
 
-@keyframes fadeIn {
-    from{
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+.fun-fact-container p:hover {
+    color: #ffffff;
 }
