--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,12 +1,12 @@
 /* Home container and content styles */
 .home-container {
-    display: flex;
     justify-content: center;
     align-items: center;
     height: calc(100vh - 80px); 
     background-color: #2C2C2C;
     font-family: Arial, Helvetica, sans-serif;
     cursor: default;
+    animation: fadeIn 3s ease-in-out;
 }
 .highlight {
     background: linear-gradient(90deg, #00C9FF, #92FE9D);
@@ -22,6 +22,7 @@
 }
 
 .home-content img {
+    margin-left: 120px;
     width: 500px;
     height: 600px;
     border-radius: 20px;
@@ -74,21 +75,19 @@
         visibility: hidden;
     }
 }
-/* Fun Fact Container Styling */
-.fun-fact-container {
-    display: flex;
-}
 
 .fun-fact {
     display: flex;
+    align-items: center;
     border: 4px solid green;
-    padding: 5px;
+    padding: 8px 12px;
     font-weight: bold;
-    border-radius: 5px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-    font-size: 12pt;
+    border-radius: 8px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+    font-size: 14pt;
     background-color: #2C2C2C;
     color: #ffffff;
+    transition: all 0.3s ease;
 }
 
 .fun-fact i {
@@ -96,20 +95,50 @@
 }
 
 .fun-fact:hover {
-    background: #ccc;
+    background-color: #ccc;
     color: #2C2C2C;
+    cursor: pointer;
 }
 
-/* Styling for the h3 text */
 .fun-fact-container p {
+    display: flex;
     color: slategrey;
-    font-size: 1rem;
     font-size: 16pt;
     padding-left: 20px;
     font-weight: bold;
-    margin-top: 5px;
+    margin-top: 10px;
+    transition: color 0.3s ease;
 }
 
 .fun-fact-container p:hover {
     color: #ffffff;
+}
+.footer {
+    position: absolute; /* Anchors the footer at the bottom */
+    bottom: 0;
+    width: 100%;
+    background-color: #2C2C2C;
+    padding: 10px 0;
+}
+
+.footer p {
+    color: #ffffff;
+    font-weight: bold;
+    text-align: center;
+    font-size: 14pt;
+}
+.social-icons {
+    margin-top: 10px;
+    text-align: center;
+}
+
+.social-icon {
+    margin: 0 15px;
+    font-size: 24px;
+    color: #ffffff;
+    transition: color 0.3s ease;
+}
+
+.social-icon:hover {
+    color: #00C9FF; /* Change color on hover */
 }
