--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -113,15 +113,11 @@
 .fun-fact-container p:hover {
     color: #ffffff;
 }
-.footer {
-    position: absolute; /* Anchors the footer at the bottom */
-    bottom: 0;
-    width: 100%;
-    background-color: #2C2C2C;
-    padding: 10px 0;
-}
+
 
 .footer p {
+    margin-top: 15px;
+
     color: #ffffff;
     font-weight: bold;
     text-align: center;
