--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -2,7 +2,7 @@
 .home-container {
     justify-content: center;
     align-items: center;
-    height: calc(100vh - 80px); 
+    height: 100vh; 
     background-color: #2C2C2C;
     font-family: Arial, Helvetica, sans-serif;
     cursor: default;
