--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -33,8 +33,9 @@ html, body {
 
 /* Navbar Title */
 .navbar h1 {
+    margin-top: 40px;
     color: #fff;
-    font-size: 26px;
+    font-size: 30px;
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 1px;
